# first

./: BeerCanVST.jucer  CMakeLists.txt  DEVELOPMENT_STATUS.md  QUICK_FIX.bat  README.md  TROUBLESHOOT_VISUAL_STUDIO.md  VISUAL_STUDIO_SETUP.md  build.bat  build_simple.bat  fix_visual_studio.bat  index.html  install_via_chocolatey.bat  install_visual_studio.bat  installation_status.bat  setup_development.bat  verify_installation.bat
